--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,5 +2,10 @@
     <string name="app_name">palavrinhas</string>
 
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="frase_segunda_chance">QUE TAL UMA SEGUNDA CHANCE? VOCÊ SÓ PRECISA ESCREVER A PALAVRA QUE ERROU!</string>
+    <string name="salvar">Salvar</string>
+    <string name="digite_seu_nome">Digite seu nome:</string>
+    <string name="limpar">Limpar</string>
+    <string name="mensagem">Mensagem</string>
 
 </resources>
