Inclusão do icone, imagem do teclado cartoon
 - bugfix da busca pelas palavras
 - Ajuste na tela de instrução

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,5 +7,7 @@
     <string name="digite_seu_nome">Digite seu nome:</string>
     <string name="limpar">Limpar</string>
     <string name="mensagem">Mensagem</string>
+    <string name="confirmar">Confirmar</string>
+    <string name="desistir">DESISTIR</string>
 
 </resources>
