--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,5 +9,6 @@
     <string name="mensagem">Mensagem</string>
     <string name="confirmar">Confirmar</string>
     <string name="desistir">DESISTIR</string>
+    <string name="Finalizar">Finalizar</string>
 
 </resources>
