use local db and fix menu

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,5 +10,8 @@
     <string name="confirmar">Confirmar</string>
     <string name="desistir">DESISTIR</string>
     <string name="Finalizar">Finalizar</string>
+    <string name="recordes">Recordes</string>
+    <string name="instrucoes">Instruções</string>
+    <string name="jogar">Jogar</string>
 
 </resources>
